<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rest3"
    android:visibility="visible"
    tools:context=".restaurant">


    <TextView
        android:id="@+id/personcountview"
        android:layout_width="232dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_the_number_of_persons"
        android:textAllCaps="false"
        android:textColor="#FFFEFE"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:id="@+id/personcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="123456789"
        android:ems="10"
        android:hint="@string/enter_a_number"
        android:inputType="number"
        android:maxLength="30"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#9C27B0"
        android:textColorHint="#92FFFFFF"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personcountview"
        app:layout_constraintVertical_bias="0.016"
        tools:ignore="Autofill" />


    <TextView
        android:id="@+id/itemcountview"
        android:layout_width="230dp"
        android:layout_height="29dp"
        android:text="@string/enter_the_number_of_items"
        android:textColor="#F8F7F1F1"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personcount"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/itemcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/enter_a_number1"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#92FFFFFF"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemcountview"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/next1"
        android:layout_width="113dp"
        android:layout_height="44dp"
        android:background="@drawable/black"
        android:text="@string/next"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />


</androidx.constraintlayout.widget.ConstraintLayout>